--- a/app-search/package.json
+++ b/app-search/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "^13.4.19",
     "next": "13",
     "postcss": "^8.4.28",
+    "postcss-input-range": "^5.0.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
